--- a/site_assets/css/style_red.css
+++ b/site_assets/css/style_red.css
@@ -1,5 +1,5 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800);
-@import url(http://fonts.googleapis.com/css?family=Raleway:300,900,100,600,400,500,800);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800);
+@import url(https://fonts.googleapis.com/css?family=Raleway:300,900,100,600,400,500,800);
 @import url(https://fonts.googleapis.com/css?family=Dosis:400,300,500,700,800,600);
 @font-face {
   font-family: 'Dosis-Regular';
